--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@testing-library/react-native": "^12.1.2",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.1",
     "@types/react": "^18.2.7",
@@ -37,6 +38,9 @@
     "typescript": "^5.0.4"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?@?react-native|@react-native-community|@react-navigation)"
+    ]
   }
 }
